--- a/sVanilla/src/ClientUi/Home/HomePage.ui
+++ b/sVanilla/src/ClientUi/Home/HomePage.ui
@@ -12,26 +12,42 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QToolButton" name="IconButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: transparent;
-                                          border:none;</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="iconSize">
-      <size>
-       <width>45</width>
-       <height>45</height>
-      </size>
-     </property>
+    <widget class="QWidget" name="widget_3" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout_4">
+      <item>
+       <spacer name="horizontalSpacer_5">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="VanillaStyle::IconButton" name="IconBtn">
+        <property name="text">
+         <string>PushButton</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer_6">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
     </widget>
    </item>
    <item>
@@ -73,14 +89,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="QPushButton" name="HomePageSubmit">
-        <property name="layoutDirection">
-         <enum>Qt::RightToLeft</enum>
-        </property>
-        <property name="text">
-         <string>Submit </string>
-        </property>
-       </widget>
+       <widget class="VanillaStyle::IconLabel" name="HomePageSubmit" native="true"/>
       </item>
      </layout>
     </widget>
@@ -216,7 +225,7 @@
     <widget class="QWidget" name="widget" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QPushButton" name="ClipBoardBtn">
+       <widget class="VanillaStyle::IconButton" name="ClipBoardBtn">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
           <horstretch>0</horstretch>
@@ -235,7 +244,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="HistoryBtn">
+       <widget class="VanillaStyle::IconButton" name="HistoryBtn">
         <property name="text">
          <string/>
         </property>
@@ -271,6 +280,17 @@
    <class>::SearchLineEdit</class>
    <extends>QLineEdit</extends>
    <header>SUI/SearchLineEdit.h</header>
+  </customwidget>
+  <customwidget>
+   <class>VanillaStyle::IconButton</class>
+   <extends>QPushButton</extends>
+   <header>VanillaStyle/Widgets/IconButton.h</header>
+  </customwidget>
+  <customwidget>
+   <class>VanillaStyle::IconLabel</class>
+   <extends>QWidget</extends>
+   <header>VanillaStyle/Widgets/IconLabel.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
