--- a/sVanilla/src/ClientUi/VideoList/VideoGridWidget.ui
+++ b/sVanilla/src/ClientUi/VideoList/VideoGridWidget.ui
@@ -99,7 +99,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="QPushButton" name="VideoGridDetailsBtn">
+       <widget class="VanillaStyle::IconButton" name="VideoGridDetailsBtn">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>0</horstretch>
@@ -112,7 +112,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="VideoGridDownloadBtn">
+       <widget class="VanillaStyle::IconButton" name="VideoGridDownloadBtn">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
           <horstretch>0</horstretch>
@@ -131,6 +131,11 @@
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
+  <customwidget>
+   <class>VanillaStyle::IconButton</class>
+   <extends>QPushButton</extends>
+   <header>VanillaStyle/Widgets/IconButton.h</header>
+  </customwidget>
   <customwidget>
    <class>::RoundImageWidget</class>
    <extends>QWidget</extends>
