--- a/sVanilla/src/ClientUi/VideoList/VideoListWidget.ui
+++ b/sVanilla/src/ClientUi/VideoList/VideoListWidget.ui
@@ -83,7 +83,7 @@
     </spacer>
    </item>
    <item>
-    <widget class="QPushButton" name="VideoListDetailsBtn">
+    <widget class="VanillaStyle::IconButton" name="VideoListDetailsBtn">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
@@ -96,7 +96,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QPushButton" name="VideoListDownloadBtn">
+    <widget class="VanillaStyle::IconButton" name="VideoListDownloadBtn">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
@@ -111,6 +111,13 @@
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>VanillaStyle::IconButton</class>
+   <extends>QPushButton</extends>
+   <header>VanillaStyle/Widgets/IconButton.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
