--- a/sVanilla/src/ClientUi/Download/DownloadingListWidget.ui
+++ b/sVanilla/src/ClientUi/Download/DownloadingListWidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>358</width>
+    <width>374</width>
     <height>146</height>
    </rect>
   </property>
@@ -45,7 +45,7 @@
        <number>0</number>
       </property>
       <item>
-       <widget class="QLabel" name="Title">
+       <widget class="QLabel" name="labelTitle">
         <property name="text">
          <string>-</string>
         </property>
@@ -90,7 +90,7 @@
       </sizepolicy>
      </property>
      <property name="value">
-      <number>24</number>
+      <number>0</number>
      </property>
     </widget>
    </item>
@@ -110,14 +110,14 @@
        <number>0</number>
       </property>
       <item>
-       <widget class="QLabel" name="Size">
+       <widget class="QLabel" name="labelSize">
         <property name="text">
          <string/>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="RemainingTime">
+       <widget class="QLabel" name="labelRemainingTime">
         <property name="text">
          <string/>
         </property>
@@ -131,7 +131,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="Duration">
+       <widget class="QLabel" name="labelDuration">
         <property name="text">
          <string/>
         </property>
@@ -173,19 +173,6 @@
           <width>32</width>
           <height>32</height>
          </size>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="VanillaStyle::IconButton" name="btnFolder">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
         </property>
         <property name="text">
          <string/>
