--- a/sVanilla/src/ClientUi/VideoList/VideoWidget.ui
+++ b/sVanilla/src/ClientUi/VideoList/VideoWidget.ui
@@ -1,129 +1,161 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-    <class>VideoPage</class>
-    <widget class="QWidget" name="VideoPage">
-        <property name="geometry">
-            <rect>
-                <x>0</x>
-                <y>0</y>
-                <width>964</width>
-                <height>783</height>
-            </rect>
+ <class>VideoPage</class>
+ <widget class="QWidget" name="VideoPage">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>964</width>
+    <height>783</height>
+   </rect>
+  </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="leftMargin">
+    <number>12</number>
+   </property>
+   <property name="topMargin">
+    <number>12</number>
+   </property>
+   <property name="rightMargin">
+    <number>12</number>
+   </property>
+   <property name="bottomMargin">
+    <number>12</number>
+   </property>
+   <item>
+    <widget class="QWidget" name="SwitchBtnWidget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>5</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
         </property>
-        <layout class="QVBoxLayout" name="verticalLayout">
-            <property name="leftMargin">
-                <number>12</number>
-            </property>
-            <property name="topMargin">
-                <number>12</number>
-            </property>
-            <property name="rightMargin">
-                <number>12</number>
-            </property>
-            <property name="bottomMargin">
-                <number>12</number>
-            </property>
-            <item>
-                <widget class="QWidget" name="SwitchBtnWidget" native="true">
-                    <layout class="QHBoxLayout" name="horizontalLayout_2">
-                        <property name="leftMargin">
-                            <number>0</number>
-                        </property>
-                        <property name="topMargin">
-                            <number>0</number>
-                        </property>
-                        <property name="rightMargin">
-                            <number>5</number>
-                        </property>
-                        <property name="bottomMargin">
-                            <number>0</number>
-                        </property>
-                        <item>
-                            <spacer name="horizontalSpacer">
-                                <property name="orientation">
-                                    <enum>Qt::Horizontal</enum>
-                                </property>
-                                <property name="sizeHint" stdset="0">
-                                    <size>
-                                        <width>40</width>
-                                        <height>20</height>
-                                    </size>
-                                </property>
-                            </spacer>
-                        </item>
-                        <item>
-                            <widget class="::ToggleSwitch" name="SwitchBtn" native="true" />
-                        </item>
-                    </layout>
-                </widget>
-            </item>
-            <item>
-                <widget class="QStackedWidget" name="VideoStackedPage">
-                    <widget class="QSplitter" name="VideoGrid">
-                        <property name="orientation">
-                            <enum>Qt::Horizontal</enum>
-                        </property>
-                        <widget class="::VideoGridWidget" name="VideoGridWidget">
-                            <property name="verticalScrollBarPolicy">
-                                <enum>Qt::ScrollBarAlwaysOff</enum>
-                            </property>
-                        </widget>
-                        <widget class="::VideoDetailWidget" name="VideoGridDetailWidget"
-                            native="true" />
-                    </widget>
-                    <widget class="QWidget" name="VideoListPage">
-                        <layout class="QVBoxLayout" name="verticalLayout_1">
-                            <item>
-                                <widget class="QSplitter" name="VideoList">
-                                    <property name="orientation">
-                                        <enum>Qt::Vertical</enum>
-                                    </property>
-                                    <widget class="::VideoListWidget" name="VideoListWidget">
-                                        <property name="verticalScrollBarPolicy">
-                                            <enum>Qt::ScrollBarAlwaysOff</enum>
-                                        </property>
-                                        <property name="resizeMode">
-                                            <enum>QListView::Fixed</enum>
-                                        </property>
-                                    </widget>
-                                    <widget class="::VideoDetailWidget" name="VideoListDetailWidget"
-                                        native="true" />
-                                </widget>
-                            </item>
-                            <item>
-                                <widget class="QWidget" name="ActionBtns" native="true" />
-                            </item>
-                        </layout>
-                    </widget>
-                </widget>
-            </item>
-        </layout>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="VanillaStyle::ToggleButton" name="SwitchBtn" native="true"/>
+      </item>
+     </layout>
     </widget>
-    <customwidgets>
-        <customwidget>
-            <class>::VideoGridWidget</class>
-            <extends>QListWidget</extends>
-            <header>ClientUi/VideoList/VideoGridWidget.h</header>
-            <container>1</container>
-        </customwidget>
-        <customwidget>
-            <class>::VideoListWidget</class>
-            <extends>QListWidget</extends>
-            <header>ClientUi/VideoList/VideoListWidget.h</header>
-        </customwidget>
-        <customwidget>
-            <class>::VideoDetailWidget</class>
-            <extends>QWidget</extends>
-            <header>ClientUi/VideoList/VideoDetailWidget.h</header>
-            <container>1</container>
-        </customwidget>
-        <customwidget>
-            <class>::ToggleSwitch</class>
-            <extends>QWidget</extends>
-            <header>SUI/ToggleSwitch.h</header>
-            <container>1</container>
-        </customwidget>
-    </customwidgets>
-    <resources />
-    <connections />
+   </item>
+   <item>
+    <widget class="QStackedWidget" name="VideoStackedPage">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="currentIndex">
+      <number>1</number>
+     </property>
+     <widget class="QSplitter" name="VideoGrid">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <widget class="::VideoGridWidget" name="VideoGridWidget">
+       <property name="verticalScrollBarPolicy">
+        <enum>Qt::ScrollBarAlwaysOff</enum>
+       </property>
+      </widget>
+      <widget class="::VideoDetailWidget" name="VideoGridDetailWidget" native="true"/>
+     </widget>
+     <widget class="QWidget" name="VideoListPage">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_1">
+       <item>
+        <widget class="QSplitter" name="VideoList">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <widget class="::VideoListWidget" name="VideoListWidget">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="verticalScrollBarPolicy">
+           <enum>Qt::ScrollBarAlwaysOff</enum>
+          </property>
+          <property name="resizeMode">
+           <enum>QListView::Fixed</enum>
+          </property>
+         </widget>
+         <widget class="::VideoDetailWidget" name="VideoListDetailWidget" native="true">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+         </widget>
+        </widget>
+       </item>
+       <item>
+        <widget class="QWidget" name="ActionBtns" native="true"/>
+       </item>
+      </layout>
+     </widget>
+    </widget>
+   </item>
+  </layout>
+ </widget>
+ <customwidgets>
+  <customwidget>
+   <class>::VideoGridWidget</class>
+   <extends>QListWidget</extends>
+   <header>ClientUi/VideoList/VideoGridWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>::VideoListWidget</class>
+   <extends>QListWidget</extends>
+   <header>ClientUi/VideoList/VideoListWidget.h</header>
+  </customwidget>
+  <customwidget>
+   <class>::VideoDetailWidget</class>
+   <extends>QWidget</extends>
+   <header>ClientUi/VideoList/VideoDetailWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>VanillaStyle::ToggleButton</class>
+   <extends>QWidget</extends>
+   <header>VanillaStyle/Widgets/ToggleButton.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
+ <resources/>
+ <connections/>
 </ui>
