--- a/sVanilla/src/ClientUi/VideoList/VideoGridWidget.ui
+++ b/sVanilla/src/ClientUi/VideoList/VideoGridWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>305</width>
-    <height>289</height>
+    <height>253</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -29,12 +29,25 @@
    <item>
     <widget class="::RoundImageWidget" name="Cover" native="true">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
     </widget>
+   </item>
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
    <item>
     <widget class="QLabel" name="VideoGridTitle">
@@ -99,7 +112,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="QPushButton" name="VideoGridDetailsBtn">
+       <widget class="VanillaStyle::IconButton" name="VideoGridDetailsBtn">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>0</horstretch>
@@ -112,7 +125,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="VideoGridDownloadBtn">
+       <widget class="VanillaStyle::IconButton" name="VideoGridDownloadBtn">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
           <horstretch>0</horstretch>
@@ -131,6 +144,11 @@
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
+  <customwidget>
+   <class>VanillaStyle::IconButton</class>
+   <extends>QPushButton</extends>
+   <header>VanillaStyle/Widgets/IconButton.h</header>
+  </customwidget>
   <customwidget>
    <class>::RoundImageWidget</class>
    <extends>QWidget</extends>
