--- a/sVanilla/src/ClientUi/Download/DownloadingListWidget.ui
+++ b/sVanilla/src/ClientUi/Download/DownloadingListWidget.ui
@@ -72,7 +72,7 @@
        </widget>
       </item>
       <item>
-       <widget class="VanillaStyle::IconButton" name="btnDelete">
+       <widget class="Vanilla::IconButton" name="btnDelete">
         <property name="text">
          <string/>
         </property>
@@ -151,7 +151,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="VanillaStyle::IconButton" name="btnPause">
+       <widget class="Vanilla::IconButton" name="btnPause">
         <property name="text">
          <string/>
         </property>
@@ -161,7 +161,7 @@
        </widget>
       </item>
       <item>
-       <widget class="VanillaStyle::IconButton" name="btnFolder">
+       <widget class="Vanilla::IconButton" name="btnFolder">
         <property name="minimumSize">
          <size>
           <width>32</width>
@@ -180,7 +180,7 @@
        </widget>
       </item>
       <item>
-       <widget class="VanillaStyle::IconButton" name="btnDetail">
+       <widget class="Vanilla::IconButton" name="btnDetail">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>0</horstretch>
@@ -200,7 +200,7 @@
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
   <customwidget>
-   <class>VanillaStyle::IconButton</class>
+   <class>Vanilla::IconButton</class>
    <extends>QPushButton</extends>
    <header>VanillaStyle/Widgets/IconButton.h</header>
   </customwidget>
