--- a/sVanilla/src/ClientUi/VideoList/VideoGridWidget.ui
+++ b/sVanilla/src/ClientUi/VideoList/VideoGridWidget.ui
@@ -105,7 +105,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="VanillaStyle::IconButton" name="VideoGridDetailsBtn">
+       <widget class="Vanilla::IconButton" name="VideoGridDetailsBtn">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>0</horstretch>
@@ -118,7 +118,7 @@
        </widget>
       </item>
       <item>
-       <widget class="VanillaStyle::IconButton" name="VideoGridDownloadBtn">
+       <widget class="Vanilla::IconButton" name="VideoGridDownloadBtn">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
           <horstretch>0</horstretch>
@@ -138,7 +138,7 @@
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
   <customwidget>
-   <class>VanillaStyle::IconButton</class>
+   <class>Vanilla::IconButton</class>
    <extends>QPushButton</extends>
    <header>VanillaStyle/Widgets/IconButton.h</header>
   </customwidget>
