--- a/sVanilla/src/ClientUi/VideoList/VideoListWidget.ui
+++ b/sVanilla/src/ClientUi/VideoList/VideoListWidget.ui
@@ -83,7 +83,7 @@
     </spacer>
    </item>
    <item>
-    <widget class="VanillaStyle::IconButton" name="VideoListDetailsBtn">
+    <widget class="Vanilla::IconButton" name="VideoListDetailsBtn">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
@@ -96,7 +96,7 @@
     </widget>
    </item>
    <item>
-    <widget class="VanillaStyle::IconButton" name="VideoListDownloadBtn">
+    <widget class="Vanilla::IconButton" name="VideoListDownloadBtn">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
@@ -113,7 +113,7 @@
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
   <customwidget>
-   <class>VanillaStyle::IconButton</class>
+   <class>Vanilla::IconButton</class>
    <extends>QPushButton</extends>
    <header>VanillaStyle/Widgets/IconButton.h</header>
   </customwidget>
