--- a/sVanilla/src/ClientUi/VideoList/VideoWidget.ui
+++ b/sVanilla/src/ClientUi/VideoList/VideoWidget.ui
@@ -52,7 +52,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="VanillaStyle::ToggleButton" name="SwitchBtn" native="true"/>
+       <widget class="Vanilla::ToggleButton" name="SwitchBtn" native="true"/>
       </item>
      </layout>
     </widget>
@@ -150,7 +150,7 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>VanillaStyle::ToggleButton</class>
+   <class>Vanilla::ToggleButton</class>
    <extends>QWidget</extends>
    <header>VanillaStyle/Widgets/ToggleButton.h</header>
    <container>1</container>
