fix: Ariaserver quit

--- a/sVanilla/src/ClientUi/Home/HomePage.ui
+++ b/sVanilla/src/ClientUi/Home/HomePage.ui
@@ -175,7 +175,7 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>Load Plugin</string>
+         <string>Import Plugin</string>
         </property>
        </widget>
       </item>
@@ -188,7 +188,7 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>Login Website</string>
+         <string>Login Download Website</string>
         </property>
        </widget>
       </item>
