--- a/sVanilla/src/ClientUi/Download/DownloadWidget.ui
+++ b/sVanilla/src/ClientUi/Download/DownloadWidget.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
-    <widget class="VanillaStyle::ToggleButton" name="horizonNavigation" native="true"/>
+    <widget class="Vanilla::ToggleButton" name="horizonNavigation" native="true"/>
    </item>
    <item row="1" column="0">
     <widget class="QStackedWidget" name="stackedWidget">
@@ -105,7 +105,7 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>VanillaStyle::ToggleButton</class>
+   <class>Vanilla::ToggleButton</class>
    <extends>QWidget</extends>
    <header>VanillaStyle/Widgets/ToggleButton.h</header>
    <container>1</container>
