--- a/sVanilla/src/ClientUi/MainWindow/MainWindow.ui
+++ b/sVanilla/src/ClientUi/MainWindow/MainWindow.ui
@@ -10,6 +10,12 @@
     <height>398</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>0</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
@@ -32,6 +38,12 @@
     </property>
     <item row="0" column="0">
      <widget class="QStackedWidget" name="stackedWidget">
+      <property name="minimumSize">
+       <size>
+        <width>580</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="currentIndex">
        <number>0</number>
       </property>
