--- a/sVanilla/src/SUI/SearchLineEdit.ui
+++ b/sVanilla/src/SUI/SearchLineEdit.ui
@@ -1,49 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-    <class>SearchLineEdit</class>
-    <widget class="QLineEdit" name="SearchLineEdit">
-        <property name="geometry">
-            <rect>
-                <x>0</x>
-                <y>0</y>
-                <width>453</width>
-                <height>48</height>
-            </rect>
-        </property>
-        <property name="sizePolicy">
-            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-            </sizepolicy>
-        </property>
-        <property name="windowTitle">
-            <string>SearchLineEdit</string>
-        </property>
-        <property name="clearButtonEnabled">
-            <bool>false</bool>
-        </property>
-        <widget class="Vanilla::IconButton" name="ClearBtn">
-            <property name="geometry">
-                <rect>
-                    <x>300</x>
-                    <y>10</y>
-                    <width>100</width>
-                    <height>32</height>
-                </rect>
-            </property>
-            <property name="text">
-                <string />
-            </property>
-        </widget>
-    </widget>
-    <layoutdefault spacing="6" margin="11" />
-    <customwidgets>
-        <customwidget>
-            <class>Vanilla::IconButton</class>
-            <extends>QAbstractButton</extends>
-            <header>VanillaStyle/Widgets/IconButton.h</header>
-        </customwidget>
-    </customwidgets>
-    <resources />
-    <connections />
+ <class>SearchLineEdit</class>
+ <widget class="QLineEdit" name="SearchLineEdit">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>453</width>
+    <height>48</height>
+   </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="windowTitle">
+   <string>SearchLineEdit</string>
+  </property>
+  <property name="clearButtonEnabled">
+   <bool>false</bool>
+  </property>
+  <widget class="Vanilla::IconButton" name="ClearBtn">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>10</y>
+     <width>100</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="Vanilla::IconButton" name="SearchBtn">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>10</y>
+     <width>100</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+ </widget>
+ <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>Vanilla::IconButton</class>
+   <extends>QPushButton</extends>
+   <header>VanillaStyle/Widgets/IconButton.h</header>
+  </customwidget>
+ </customwidgets>
+ <resources/>
+ <connections/>
 </ui>
